After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789937 - st-scroll-view-fade-generated.c not generated in time
st-scroll-view-fade-generated.c not generated in time
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.26.x
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2017-11-05 16:57 UTC by Jasper Lievisse Adriaanse
Modified: 2019-12-20 22:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Ensure st-scroll-view-fade-generated.c is generated before use (1.32 KB, patch)
2019-12-20 19:12 UTC, Kurt Miller
none Details | Review

Description Jasper Lievisse Adriaanse 2017-11-05 16:57:31 UTC
It seems that the generation of st-scroll-view-fade-generated.c is not always happening before it's used for compilation. For example in the OpenBSD build we now generate the file before the configure stage.

[26/123] cc  -Isrc/st/st-1.0@sha -Isrc/st -I../gnome-shell-3.26.2/src/st -I/usr/obj/ports/gnome-shell-3.26.2/gno
me-shell-3.26.2/src -I/usr/obj/ports/gnome-shell-3.26.2/build-amd64 -I/usr/local/include/mutter/clutter-1 -I/usr
/local/include/cairo -I/usr/local/include/atk-1.0 -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -
I/usr/local/include -I/usr/local/include/json-glib-1.0 -I/usr/X11R6/include -I/usr/local/include/mutter/cogl -I/
usr/X11R6/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk
-pixbuf-2.0 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/X11R6/include/libdrm -I/usr/l
ocal/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/local/include/d
bus-1.0 -I/usr/local/lib/dbus-1.0/include -I/usr/local/include/gio-unix-2.0/ -I/usr/local/include/libcroco-0.6 -
I/usr/local/include/libxml2 -Xclang -fcolor-diagnostics -pipe -D_FILE_OFFSET_BITS=64 -O2 -g -O0 -fPIC -pthread '
-DPREFIX="/usr/local"' '-DLIBDIR="/usr/local/lib"' '-DG_LOG_DOMAIN="St"' -DST_COMPILATION -DCLUTTER_ENABLE_EXPER
IMENTAL_API -DCOGL_ENABLE_EXPERIMENTAL_API '-DPACKAGE_DATA_DIR="/usr/local/share/gnome-shell"' -MMD -MQ 'src/st/
st-1.0@sha/st-scroll-view-fade.c.o' -MF 'src/st/st-1.0@sha/st-scroll-view-fade.c.o.d' -o 'src/st/st-1.0@sha/st-s
croll-view-fade.c.o' -c ../gnome-shell-3.26.2/src/st/st-scroll-view-fade.c
FAILED: src/st/st-1.0@sha/st-scroll-view-fade.c.o
cc  -Isrc/st/st-1.0@sha -Isrc/st -I../gnome-shell-3.26.2/src/st -I/usr/obj/ports/gnome-shell-3.26.2/gnome-shell-
3.26.2/src -I/usr/obj/ports/gnome-shell-3.26.2/build-amd64 -I/usr/local/include/mutter/clutter-1 -I/usr/local/in
clude/cairo -I/usr/local/include/atk-1.0 -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -I/usr/loc
al/include -I/usr/local/include/json-glib-1.0 -I/usr/X11R6/include -I/usr/local/include/mutter/cogl -I/usr/X11R6
/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2
.0 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/X11R6/include/libdrm -I/usr/local/incl
ude/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/local/include/dbus-1.0 -
I/usr/local/lib/dbus-1.0/include -I/usr/local/include/gio-unix-2.0/ -I/usr/local/include/libcroco-0.6 -I/usr/loc
al/include/libxml2 -Xclang -fcolor-diagnostics -pipe -D_FILE_OFFSET_BITS=64 -O2 -g -O0 -fPIC -pthread '-DPREFIX=
"/usr/local"' '-DLIBDIR="/usr/local/lib"' '-DG_LOG_DOMAIN="St"' -DST_COMPILATION -DCLUTTER_ENABLE_EXPERIMENTAL_A
PI -DCOGL_ENABLE_EXPERIMENTAL_API '-DPACKAGE_DATA_DIR="/usr/local/share/gnome-shell"' -MMD -MQ 'src/st/st-1.0@sh
a/st-scroll-view-fade.c.o' -MF 'src/st/st-1.0@sha/st-scroll-view-fade.c.o.d' -o 'src/st/st-1.0@sha/st-scroll-vie
w-fade.c.o' -c ../gnome-shell-3.26.2/src/st/st-scroll-view-fade.c
../gnome-shell-3.26.2/src/st/st-scroll-view-fade.c:34:10: fatal error: 'st-scroll-view-fade-generated.c' file no
t found
#include "st-scroll-view-fade-generated.c"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
ninja: build stopped: subcommand failed.

This happens randomly, is there a way to declare a dependency on the scroll-view-fade-glsl target to ensure this file gets generated at the right time?
Comment 1 Kurt Miller 2019-12-20 19:12:46 UTC
Created attachment 374246 [details] [review]
Ensure st-scroll-view-fade-generated.c is generated before use

Please consider the following diff to ensure that st-scroll-view-fade-generated.c is generated before use.
Comment 2 Florian Müllner 2019-12-20 20:03:45 UTC
Thanks, I've created a MR based on that under https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/908
Comment 3 Kurt Miller 2019-12-20 22:20:08 UTC
Thank you.